adding scroll to top button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
             <span class="burger-icon"></span>
         </label>
     </header>
+    <button class="btn_to_top">
+        <svg viewBox="0 0 24 24">
+            <path d="m6.293 13.293 1.414 1.414L12 10.414l4.293 4.293 1.414-1.414L12 7.586z"></path>
+        </svg>
+    </button>
+    <main>
+        <div class="content one"></div>
+        <div class="content two"></div>
+        <div class="content three"></div>
+        <div class="content four"></div>
+        <div class="content five"></div>
+        <div class="content six"></div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
