editing menu and scroll to top button

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <header>
         <section class="menu">
             <ul>
-                <li><a href="">first</a></li>
-                <li><a href="">second</a></li>
-                <li><a href="">third</a></li>
-                <li><a href="">fourth</a></li>
-                <li><a href="">fifth</a></li>
-                <li><a href="">sixth</a></li>
+                <li><a href="#first">first</a></li>
+                <li><a href="#second">second</a></li>
+                <li><a href="#third">third</a></li>
+                <li><a href="#fourth">fourth</a></li>
+                <li><a href="#fifth">fifth</a></li>
             </ul>
         </section>  
         <label class="burger">
@@ -28,12 +27,11 @@
         </svg>
     </button>
     <main>
-        <div class="content one"></div>
-        <div class="content two"></div>
-        <div class="content three"></div>
-        <div class="content four"></div>
-        <div class="content five"></div>
-        <div class="content six"></div>
+        <div id="first" class="content one"></div>
+        <div id="second" class="content two"></div>
+        <div id="third" class="content three"></div>
+        <div id="fourth" class="content four"></div>
+        <div id="fifth" class="content five"></div>
     </main>
     <script src="script.js"></script>
 </body>
